OO-893 added today variable, better example